syntax = "proto3";

message CreatePlayer{
  int64 userId = 1;
  int32 serverId = 2;
  int32 sex = 3;
  int32 kind = 4;
}