syntax = "proto3";

import "Message.proto";

option java_package = "org.whk.protobuf.message";
option java_outer_classname = "MessageWrapperProto";

message MessageWrapper{
  string serverInstance = 1;
  int64 playerId = 2;
  int64 userId = 3;
  Message message = 4;
}