syntax = "proto3";

message PlayerInfo{
  int64 id = 1;
  int64 userId = 2;
  int32 career = 3;
  int32 sex = 4;
  int64 lastLogin = 5;
}

message PlayerInfos{
  repeated PlayerInfo PlayerInfos = 1;
}